use external xtal for tester

--- a/firmware/stm32/m02812/src/Makefile
+++ b/firmware/stm32/m02812/src/Makefile
@@ -27,7 +27,7 @@ UARTBALL16_SRCS=uartball16.c util.c $(STARTUP_SRC)
 RELAYBALL_SRCS=relayball.S relayball_init.c default_route.c bitbang16_relay_4strip.S util.c fsm.c $(STARTUP_SRC)
 MAIN_SRCS=main.c bitbang.S util.c $(STARTUP_SRC)
 MAIN16_SRCS=main16.c bitbang16.S util.c $(STARTUP_SRC)
-JITTER_TIMER_SRCS=jitter_timer.c jitter_timer.S util.c $(STARTUP_SRC)
+JITTER_TIMER_SRCS=jitter_timer.c jitter_timer.S $(STARTUP_SRC)
 TEST_SRCS=test/test.c bitbang.S util.c $(STARTUP_SRC)
 TEST16_SRCS=test/test16.c bitbang16.S util.c $(STARTUP_SRC)
 TEST_EDGEBALL16_SRCS=test/test_edgeball16.c bitbang16_4strip.S util.c $(STARTUP_SRC)
