sync led driver

--- a/firmware/pdk/softpwm/Makefile
+++ b/firmware/pdk/softpwm/Makefile
@@ -1,23 +1,26 @@
 
-TARGET13=leddriver16bit-pdk13.ihx
-TARGET14=leddriver16bit-pdk14.ihx
+TARGET13=leddriver16bit-pms150c.ihx
+TARGET14=leddriver16bit-pfs154.ihx
 
-TESTS=lowbits16_test-pdk14.ihx
+TESTS=lowbits16_test-pfs154.ihx
 
 TARGETS=$(TARGET13) $(TARGET14) $(TESTS)
 
 CLEAN=$(TARGETS)
-DEPS=pdk.asm uart2.asm delay.asm softpwm16.asm settings.asm pdk13/parts.asm pdk14/parts.asm
+DEPS=pdk.asm uart2.asm delay.asm softpwm16.asm settings.asm device/pms150c/part.asm device/pfs154/part.asm
 
 DEVICE=/dev/ttyACM0
 
-AS13=sdaspdk13 -Ipdk13
-AS14=sdaspdk14 -Ipdk14
+AS13=sdaspdk13
+AS14=sdaspdk14
 
 PROG=easypdkprog
 
 NAME13=PMS150C
 NAME14=PFS154
+
+INC13=-Idevice/pms150c
+INC14=-Idevice/pfs154
 
 ADDRESS=0
 
@@ -29,11 +32,11 @@ clean:
 	-rm $(CLEAN)
 	-rm *.ihx *.cdb *.lst *.map *.rel *.rst *.sym
 
-%-pdk13.rel: %.asm $(DEPS)
-	$(AS13) -s -o -l $@ $<
+%-pms150c.rel: %.asm $(DEPS)
+	$(AS13) $(INC13) -s -o -l $@ $<
 
-%-pdk14.rel: %.asm $(DEPS)
-	$(AS14) -s -o -l $@ $<
+%-pfs154.rel: %.asm $(DEPS)
+	$(AS14) $(INC14) -s -o -l $@ $<
 
 %.ihx: %.rel
 	sdldpdk -muwx -g INDEX=$$(($(ADDRESS)*3)) -i $@ -Y $< -e
