--- a/firmware/stm32/m02812/src/Makefile
+++ b/firmware/stm32/m02812/src/Makefile
@@ -6,7 +6,7 @@ LDFLAGS=-Wl,--gc-sections -Lplatform -T../$(LINKER_SCRIPT)
 LINKER_SCRIPT=platform/stm32f030.ld
 STARTUP_SRC=platform/startup_stm32f0xx.s
 
-TARGETS=main.elf main.bin main16.elf main16.bin edgeball16.elf edgeball16.bin relayball.elf relayball.bin uartball16.elf uartball16.bin jitter_timer.elf jitter_timer.bin
+TARGETS=main.elf main.bin main16.elf main16.bin edgeball16.elf edgeball16.bin relayball.elf relayball.bin uartball16.elf uartball16.bin jitter_timer.elf jitter_timer.bin timing_experiment.bin
 TESTS=test/test.elf test/test16.elf test/test_edgeball16.elf test/test_relay16.elf test/test_edgeball16alt.elf
 
 UARTBALL16_FLAGS=#-DN_VALUES_PER_LED=6 -DN_LEDS_PER_STRIP=8
@@ -28,6 +28,7 @@ RELAYBALL_SRCS=relayball.S relayball_init.c default_route.c bitbang16_relay_4str
 MAIN_SRCS=main.c bitbang.S util.c $(STARTUP_SRC)
 MAIN16_SRCS=main16.c bitbang16.S util.c $(STARTUP_SRC)
 JITTER_TIMER_SRCS=jitter_timer.c jitter_timer.S $(STARTUP_SRC)
+TIMING_EXPERIMENT_SRCS=timing_experiment.c timing_experiment.S $(STARTUP_SRC)
 TEST_SRCS=test/test.c bitbang.S util.c $(STARTUP_SRC)
 TEST16_SRCS=test/test16.c bitbang16.S util.c $(STARTUP_SRC)
 TEST_EDGEBALL16_SRCS=test/test_edgeball16.c bitbang16_4strip.S util.c $(STARTUP_SRC)
@@ -66,6 +67,9 @@ relayball.elf: $(RELAYBALL_SRCS) $(LINKER_SCRIPT) $(HEADERS)
 
 jitter_timer.elf: $(JITTER_TIMER_SRCS) $(LINKER_SCRIPT) $(HEADERS)
 	$(GCC) $(CFLAGS) $(LDFLAGS) $(JITTER_TIMER_FLAGS) $(JITTER_TIMER_SRCS) -o $@
+
+timing_experiment.elf: $(TIMING_EXPERIMENT_SRCS) $(LINKER_SCRIPT) $(HEADERS) timing_experiment.h
+	$(GCC) $(CFLAGS) $(LDFLAGS) $(JITTER_TIMER_FLAGS) $(TIMING_EXPERIMENT_SRCS) -o $@
 
 main.elf: $(MAIN_SRCS) $(LINKER_SCRIPT) $(HEADERS)
 	$(GCC) $(CFLAGS) $(LDFLAGS) $(MAIN_FLAGS) $(MAIN_SRCS) -o $@
