clean up unneeded files

--- a/firmware/stm32/m02812/src/Makefile
+++ b/firmware/stm32/m02812/src/Makefile
@@ -8,18 +8,12 @@ LINKER_SCRIPT=platform/stm32f030.ld
 LINKER_SCRIPT_072=platform/stm32f072.ld
 STARTUP_SRC=platform/startup_stm32f0xx.s
 
-TARGETS=main.elf main.bin main16.elf main16.bin edgeball16.elf edgeball16.bin relayball.elf relayball.bin uartball16.elf uartball16.bin jitter_timer.elf jitter_timer.bin timing_experiment.bin strip5.bin
-TESTS=test/test.elf test/test16.elf test/test_edgeball16.elf test/test_relay16.elf test/test_edgeball16alt.elf
+TARGETS=main.bin main16.bin edgeball16.bin relayball.bin uartball16.bin jitter_timer.bin timing_experiment.bin strip5.bin
 
 UARTBALL16_FLAGS=#-DN_VALUES_PER_LED=6 -DN_LEDS_PER_STRIP=8
 EDGEBALL16_FLAGS=-DN_VALUES_PER_LED=3 -DN_LEDS_PER_STRIP=60
 MAIN16_FLAGS=-DN_VALUES_PER_LED=3 -DN_LEDS_PER_STRIP=15
 MAIN_FLAGS=
-TEST16_FLAGS=-DN_VALUES_PER_LED=3 -DN_LEDS_PER_STRIP=15
-TEST_RELAY16_FLAGS=
-TEST_EDGEBALL16_FLAGS=
-TEST_EDGEBALL16ALT_FLAGS=
-TEST_FLAGS=
 RELAYBALL_FLAGS=
 JITTER_TIMER_FLAGS=
 TIMING_EXPERIMENT_FLAGS=
@@ -34,26 +28,22 @@ MAIN16_SRCS=main16.c bitbang16.S util.c $(STARTUP_SRC)
 JITTER_TIMER_SRCS=jitter_timer.c jitter_timer.S $(STARTUP_SRC)
 TIMING_EXPERIMENT_SRCS=timing_experiment.c timing_experiment.S $(STARTUP_SRC)
 STRIP5_SRCS=strip5.S strip5_init.c strip5_bitbang.S util.c fsm.c $(STARTUP_SRC)
-TEST_SRCS=test/test.c bitbang.S util.c $(STARTUP_SRC)
-TEST16_SRCS=test/test16.c bitbang16.S util.c $(STARTUP_SRC)
-TEST_EDGEBALL16_SRCS=test/test_edgeball16.c bitbang16_4strip.S util.c $(STARTUP_SRC)
-TEST_EDGEBALL16ALT_SRCS=test/test_edgeball16.c bitbang16_alt_4strip.S util.c $(STARTUP_SRC)
-TEST_RELAY16_SRCS=test/test_relay16.c bitbang16_relay_4strip.S util.c $(STARTUP_SRC)
 HEADERS=bitbang16.h bitbang16_4strip.h bitbang16_relay_4strip.h bitbang.h util.h m0delay.S fsm.h uartball16.h jitter_timer.h
 
 .PHONY: all clean test
 
+.PRECIOUS: %.elf
+
 all:$(TARGETS)
 
 clean:
-	-rm $(TARGETS) $(TESTS) test/*.pyc
+	-rm $(TARGETS) *.elf test/*.pyc
 
-test: $(TESTS)
-	test/test_relay16.py test/test_relay16.elf
-	test/test_edgeball16.py test/test_edgeball16alt.elf
-	test/test_bitbang.py test/test.elf 
-	test/test_bitbang16.py test/test16.elf
-	test/test_edgeball16.py test/test_edgeball16.elf
+test: $(TARGETS)
+	test/test_relay16.py relayball.elf
+	test/test_bitbang.py main.elf 
+	test/test_bitbang16.py main16.elf
+	test/test_edgeball16.py edgeball16.elf
 
 %.bin: %.elf
 	arm-none-eabi-objcopy -O binary $< $@
@@ -81,19 +71,4 @@ strip5.elf: $(STRIP5_SRCS) $(LINKER_SCRIPT) $(HEADERS)
 
 main.elf: $(MAIN_SRCS) $(LINKER_SCRIPT) $(HEADERS)
 	$(GCC) $(CFLAGS) $(LDFLAGS) $(MAIN_FLAGS) $(MAIN_SRCS) -o $@
-
-test/test16.elf: $(TEST16_SRCS) $(LINKER_SCRIPT) $(HEADERS)
-	$(GCC) $(CFLAGS) $(LDFLAGS) $(TEST16_FLAGS) $(TEST16_SRCS) -o $@
-
-test/test_edgeball16.elf: $(TEST_EDGEBALL16_SRCS) $(LINKER_SCRIPT) $(HEADERS)
-	$(GCC) $(CFLAGS) $(LDFLAGS) $(TEST16_FLAGS) $(TEST_EDGEBALL16_SRCS) -o $@
-
-test/test_relay16.elf: $(TEST_RELAY16_SRCS) $(LINKER_SCRIPT) $(HEADERS)
-	$(GCC) $(CFLAGS) $(LDFLAGS) $(TEST_RELAY16_FLAGS) $(TEST_RELAY16_SRCS) -o $@
-
-test/test_edgeball16alt.elf: $(TEST_EDGEBALL16ALT_SRCS) $(LINKER_SCRIPT) $(HEADERS)
-	$(GCC) $(CFLAGS) $(LDFLAGS) $(TEST_EDGEBALL16ALT_FLAGS) $(TEST_EDGEBALL16ALT_SRCS) -o $@
-
-test/test.elf: $(TEST_SRCS) $(LINKER_SCRIPT) $(HEADERS)
-	$(GCC) $(CFLAGS) $(LDFLAGS) $(TEST_FLAGS) $(TEST_SRCS) -o $@
 
