renae main -> dither8

--- a/firmware/stm32/m02812/src/Makefile
+++ b/firmware/stm32/m02812/src/Makefile
@@ -9,7 +9,7 @@ LINKER_SCRIPT_072=platform/stm32f072.ld
 STARTUP_SRC=platform/startup_stm32f0xx.s
 
 TARGETS=                  \
-	main.bin              \
+	dither8.bin           \
 	dither16.bin          \
 	edgeball16.bin        \
 	relayball.bin         \
@@ -21,7 +21,7 @@ TARGETS=                  \
 UARTBALL16_FLAGS=
 EDGEBALL16_FLAGS=-DN_VALUES_PER_LED=3 -DN_LEDS_PER_STRIP=60
 DITHER16_FLAGS=
-MAIN_FLAGS=
+DITHER8_FLAGS=
 RELAYBALL_FLAGS=
 JITTER_TIMER_FLAGS=
 TIMING_EXPERIMENT_FLAGS=
@@ -31,12 +31,12 @@ STRIP5_FLAGS=
 EDGEBALL16_SRCS=edgeball16.c bitbang16_4strip.S util.c $(STARTUP_SRC)
 UARTBALL16_SRCS=uartball16.c util.c $(STARTUP_SRC)
 RELAYBALL_SRCS=relayball.S relayball_init.c relayball_bitbang.S util.c fsm.c $(STARTUP_SRC)
-MAIN_SRCS=main.c bitbang.S util.c $(STARTUP_SRC)
+DITHER8_SRCS=dither8.c dither8_bitbang.S util.c $(STARTUP_SRC)
 DITHER16_SRCS=dither16.c dither16_bitbang.S util.c $(STARTUP_SRC)
 JITTER_TIMER_SRCS=jitter_timer.c jitter_timer.S $(STARTUP_SRC)
 TIMING_EXPERIMENT_SRCS=timing_experiment.c timing_experiment.S $(STARTUP_SRC)
 STRIP5_SRCS=strip5.S strip5_init.c strip5_bitbang.S util.c fsm.c $(STARTUP_SRC)
-HEADERS=dither16.h bitbang16_4strip.h bitbang.h util.h m0delay.S fsm.h uartball16.h jitter_timer.h
+HEADERS=dither16.h bitbang16_4strip.h dither8.h util.h m0delay.S fsm.h uartball16.h jitter_timer.h
 
 .PHONY: all clean test
 
@@ -49,7 +49,7 @@ clean:
 
 test: $(TARGETS)
 	test/test_relay16.py relayball.elf
-	test/test_bitbang.py main.elf 
+	test/test_bitbang.py dither.elf 
 	test/test_bitbang16.py dither16.elf
 	test/test_edgeball16.py edgeball16.elf
 
@@ -77,6 +77,6 @@ timing_experiment.elf: $(TIMING_EXPERIMENT_SRCS) $(LINKER_SCRIPT) $(HEADERS) tim
 strip5.elf: $(STRIP5_SRCS) $(LINKER_SCRIPT) $(HEADERS)
 	$(GCC) $(CFLAGS) $(LDFLAGS_072) $(STRIP5_FLAGS) $(STRIP5_SRCS) -o $@
 
-main.elf: $(MAIN_SRCS) $(LINKER_SCRIPT) $(HEADERS)
-	$(GCC) $(CFLAGS) $(LDFLAGS) $(MAIN_FLAGS) $(MAIN_SRCS) -o $@
+dither8.elf: $(DITHER8_SRCS) $(LINKER_SCRIPT) $(HEADERS)
+	$(GCC) $(CFLAGS) $(LDFLAGS) $(DITHER8_FLAGS) $(DITHER8_SRCS) -o $@
 
