rename edgeball16 -> strip4

--- a/firmware/stm32/m02812/src/Makefile
+++ b/firmware/stm32/m02812/src/Makefile
@@ -11,32 +11,30 @@ STARTUP_SRC=platform/startup_stm32f0xx.s
 TARGETS=                  \
 	dither8.bin           \
 	dither16.bin          \
-	edgeball16.bin        \
+	strip4.bin            \
+	strip5.bin            \
 	relayball.bin         \
 	uartball16.bin        \
 	jitter_timer.bin      \
-	timing_experiment.bin \
-	strip5.bin
+	timing_experiment.bin
 
-UARTBALL16_FLAGS=
-EDGEBALL16_FLAGS=-DN_VALUES_PER_LED=3 -DN_LEDS_PER_STRIP=60
-DITHER16_FLAGS=
-DITHER8_FLAGS=
-RELAYBALL_FLAGS=
-JITTER_TIMER_FLAGS=
-TIMING_EXPERIMENT_FLAGS=
-STRIP5_FLAGS=
+DITHER8_HEADERS=dither8.h util.h m0delay.S
+DITHER16_HEADERS=dither16.h util.h m0delay.S
+STRIP5_HEADERS=strip5.h util.h m0delay.S
+STRIP4_HEADERS=strip4.h util.h fsm.h m0delay.S
+RELAYBALL_HEADERS=relayball.h util.h fsm.h m0delay.S
+UARTBALL16_HEADERS=uartball16.h util.h
+JITTER_TIMER_HEADERS=jitter_timer.h m0delay.S
+TIMING_EXPERIMENT_HEADERS=timing_experiment.h m0delay.S
 
-
-EDGEBALL16_SRCS=edgeball16.c bitbang16_4strip.S util.c $(STARTUP_SRC)
-UARTBALL16_SRCS=uartball16.c util.c $(STARTUP_SRC)
-RELAYBALL_SRCS=relayball.S relayball_init.c relayball_bitbang.S util.c fsm.c $(STARTUP_SRC)
 DITHER8_SRCS=dither8.c dither8_bitbang.S util.c $(STARTUP_SRC)
 DITHER16_SRCS=dither16.c dither16_bitbang.S util.c $(STARTUP_SRC)
+STRIP4_SRCS=strip4.c strip4_bitbang.S util.c $(STARTUP_SRC)
+STRIP5_SRCS=strip5.S strip5_init.c strip5_bitbang.S util.c fsm.c $(STARTUP_SRC)
+RELAYBALL_SRCS=relayball.S relayball_init.c relayball_bitbang.S util.c fsm.c $(STARTUP_SRC)
+UARTBALL16_SRCS=uartball16.c util.c $(STARTUP_SRC)
 JITTER_TIMER_SRCS=jitter_timer.c jitter_timer.S $(STARTUP_SRC)
 TIMING_EXPERIMENT_SRCS=timing_experiment.c timing_experiment.S $(STARTUP_SRC)
-STRIP5_SRCS=strip5.S strip5_init.c strip5_bitbang.S util.c fsm.c $(STARTUP_SRC)
-HEADERS=dither16.h bitbang16_4strip.h dither8.h util.h m0delay.S fsm.h uartball16.h jitter_timer.h
 
 .PHONY: all clean test
 
@@ -48,35 +46,36 @@ clean:
 	-rm $(TARGETS) *.elf test/*.pyc
 
 test: $(TARGETS)
-	test/test_relay16.py relayball.elf
-	test/test_bitbang.py dither.elf 
+	test/test_bitbang.py dither.elf
 	test/test_bitbang16.py dither16.elf
-	test/test_edgeball16.py edgeball16.elf
+	test/test_strip4.py strip4.elf
+	test/test_strip5.py strip5.elf
+	test/test_relay16.py relayball.elf
 
 %.bin: %.elf
 	arm-none-eabi-objcopy -O binary $< $@
 
-dither16.elf: $(DITHER16_SRCS) $(LINKER_SCRIPT) $(HEADERS)
+dither8.elf: $(DITHER8_SRCS) $(LINKER_SCRIPT) $(DITHER8_HEADERS)
+	$(GCC) $(CFLAGS) $(LDFLAGS) $(DITHER8_FLAGS) $(DITHER8_SRCS) -o $@
+
+dither16.elf: $(DITHER16_SRCS) $(LINKER_SCRIPT) $(DITHER16_HEADERS)
 	$(GCC) $(CFLAGS) $(LDFLAGS) $(DITHER16_FLAGS) $(DITHER16_SRCS) -o $@
 
-edgeball16.elf: $(EDGEBALL16_SRCS) $(LINKER_SCRIPT) $(HEADERS)
-	$(GCC) $(CFLAGS) $(LDFLAGS) $(EDGEBALL16_FLAGS) $(EDGEBALL16_SRCS) -o $@
+strip4.elf: $(STRIP4_SRCS) $(LINKER_SCRIPT) $(STRIP4_HEADERS)
+	$(GCC) $(CFLAGS) $(LDFLAGS) $(STRIP4_FLAGS) $(STRIP4_SRCS) -o $@
 
-uartball16.elf: $(UARTBALL16_SRCS) $(LINKER_SCRIPT) $(HEADERS)
-	$(GCC) $(CFLAGS) $(LDFLAGS) $(UARTBALL16_FLAGS) $(UARTBALL16_SRCS) -o $@
-
-relayball.elf: $(RELAYBALL_SRCS) $(LINKER_SCRIPT) $(HEADERS)
-	$(GCC) $(CFLAGS) $(LDFLAGS) $(RELAYBALL_FLAGS) $(RELAYBALL_SRCS) -o $@
-
-jitter_timer.elf: $(JITTER_TIMER_SRCS) $(LINKER_SCRIPT) $(HEADERS)
-	$(GCC) $(CFLAGS) $(LDFLAGS) $(JITTER_TIMER_FLAGS) $(JITTER_TIMER_SRCS) -o $@
-
-timing_experiment.elf: $(TIMING_EXPERIMENT_SRCS) $(LINKER_SCRIPT) $(HEADERS) timing_experiment.h
-	$(GCC) $(CFLAGS) $(LDFLAGS) $(TIMING_EXPERIMENT_FLAGS) $(TIMING_EXPERIMENT_SRCS) -o $@
-
-strip5.elf: $(STRIP5_SRCS) $(LINKER_SCRIPT) $(HEADERS)
+strip5.elf: $(STRIP5_SRCS) $(LINKER_SCRIPT) $(STRIP5_HEADERS)
 	$(GCC) $(CFLAGS) $(LDFLAGS_072) $(STRIP5_FLAGS) $(STRIP5_SRCS) -o $@
 
-dither8.elf: $(DITHER8_SRCS) $(LINKER_SCRIPT) $(HEADERS)
-	$(GCC) $(CFLAGS) $(LDFLAGS) $(DITHER8_FLAGS) $(DITHER8_SRCS) -o $@
+relayball.elf: $(RELAYBALL_SRCS) $(LINKER_SCRIPT) $(RELAYBALL_HEADERS)
+	$(GCC) $(CFLAGS) $(LDFLAGS) $(RELAYBALL_FLAGS) $(RELAYBALL_SRCS) -o $@
+
+uartball16.elf: $(UARTBALL16_SRCS) $(LINKER_SCRIPT) $(UARTBALL16_HEADERS)
+	$(GCC) $(CFLAGS) $(LDFLAGS) $(UARTBALL16_FLAGS) $(UARTBALL16_SRCS) -o $@
+
+jitter_timer.elf: $(JITTER_TIMER_SRCS) $(LINKER_SCRIPT) $(JITTER_TIMER_HEADERS)
+	$(GCC) $(CFLAGS) $(LDFLAGS) $(JITTER_TIMER_FLAGS) $(JITTER_TIMER_SRCS) -o $@
+
+timing_experiment.elf: $(TIMING_EXPERIMENT_SRCS) $(LINKER_SCRIPT) $(TIMING_EXPERIMENT_HEADERS)
+	$(GCC) $(CFLAGS) $(LDFLAGS) $(TIMING_EXPERIMENT_FLAGS) $(TIMING_EXPERIMENT_SRCS) -o $@
 
