--- a/firmware/stm32/m02812/src/Makefile
+++ b/firmware/stm32/m02812/src/Makefile
@@ -15,6 +15,7 @@ TARGETS=                  \
 	strip5.bin            \
 	relayball.bin         \
 	uartball16.bin        \
+	ws2801par.bin         \
 	jitter_timer.bin      \
 	timing_experiment.bin
 
@@ -24,6 +25,7 @@ STRIP5_HEADERS=strip5.h util.h m0delay.S
 STRIP4_HEADERS=strip4.h util.h fsm.h m0delay.S
 RELAYBALL_HEADERS=relayball.h util.h fsm.h m0delay.S
 UARTBALL16_HEADERS=uartball16.h util.h
+WS2801PAR_HEADERS=ws2801par.h util.h m0delay.S
 JITTER_TIMER_HEADERS=jitter_timer.h m0delay.S
 TIMING_EXPERIMENT_HEADERS=timing_experiment.h m0delay.S
 
@@ -33,6 +35,7 @@ STRIP4_SRCS=strip4.c strip4_bitbang.S util.c $(STARTUP_SRC)
 STRIP5_SRCS=strip5.S strip5_init.c strip5_bitbang.S util.c fsm.c $(STARTUP_SRC)
 RELAYBALL_SRCS=relayball.S relayball_init.c relayball_bitbang.S util.c fsm.c $(STARTUP_SRC)
 UARTBALL16_SRCS=uartball16.c util.c $(STARTUP_SRC)
+WS2801PAR_SRCS=ws2801par.c ws2801par_bitbang.S util.c $(STARTUP_SRC)
 JITTER_TIMER_SRCS=jitter_timer.c jitter_timer.S $(STARTUP_SRC)
 TIMING_EXPERIMENT_SRCS=timing_experiment.c timing_experiment.S $(STARTUP_SRC)
 
@@ -64,7 +67,7 @@ dither16.elf: $(DITHER16_SRCS) $(LINKER_SCRIPT) $(DITHER16_HEADERS)
 strip4.elf: $(STRIP4_SRCS) $(LINKER_SCRIPT) $(STRIP4_HEADERS)
 	$(GCC) $(CFLAGS) $(LDFLAGS) $(STRIP4_FLAGS) $(STRIP4_SRCS) -o $@
 
-strip5.elf: $(STRIP5_SRCS) $(LINKER_SCRIPT) $(STRIP5_HEADERS)
+strip5.elf: $(STRIP5_SRCS) $(LINKER_SCRIPT_072) $(STRIP5_HEADERS)
 	$(GCC) $(CFLAGS) $(LDFLAGS_072) $(STRIP5_FLAGS) $(STRIP5_SRCS) -o $@
 
 relayball.elf: $(RELAYBALL_SRCS) $(LINKER_SCRIPT) $(RELAYBALL_HEADERS)
@@ -72,6 +75,9 @@ relayball.elf: $(RELAYBALL_SRCS) $(LINKER_SCRIPT) $(RELAYBALL_HEADERS)
 
 uartball16.elf: $(UARTBALL16_SRCS) $(LINKER_SCRIPT) $(UARTBALL16_HEADERS)
 	$(GCC) $(CFLAGS) $(LDFLAGS) $(UARTBALL16_FLAGS) $(UARTBALL16_SRCS) -o $@
+
+ws2801par.elf: $(WS2801PAR_SRCS) $(LINKER_SCRIPT_072) $(WS2801PAR_HEADERS)
+	$(GCC) $(CFLAGS) $(LDFLAGS_072) $(WS2801PAR_FLAGS) $(WS2801PAR_SRCS) -o $@
 
 jitter_timer.elf: $(JITTER_TIMER_SRCS) $(LINKER_SCRIPT) $(JITTER_TIMER_HEADERS)
 	$(GCC) $(CFLAGS) $(LDFLAGS) $(JITTER_TIMER_FLAGS) $(JITTER_TIMER_SRCS) -o $@
