add dma based ws2812 code

--- a/firmware/stm32/m02812/src/Makefile
+++ b/firmware/stm32/m02812/src/Makefile
@@ -3,9 +3,11 @@ GCC=arm-none-eabi-gcc
 CFLAGS=-Wall -g -std=c99 -mlittle-endian -mcpu=cortex-m0 -march=armv6-m -mthumb -ffunction-sections -fdata-sections -I platform -I. -Os
 LDFLAGS=-Wl,--gc-sections -Lplatform -T../$(LINKER_SCRIPT)
 LDFLAGS_072=-Wl,--gc-sections -Lplatform -T../$(LINKER_SCRIPT_072)
+LDFLAGS_030CC=-Wl,--gc-sections -Lplatform -T../$(LINKER_SCRIPT_030CC)
 
 LINKER_SCRIPT=platform/stm32f030.ld
 LINKER_SCRIPT_072=platform/stm32f072.ld
+LINKER_SCRIPT_030CC=platform/stm32f030cc.ld
 STARTUP_SRC=platform/startup_stm32f0xx.s
 
 TARGETS=                  \
@@ -16,6 +18,7 @@ TARGETS=                  \
 	relayball.bin         \
 	uartball16.bin        \
 	ws2801par.bin         \
+	ws2812_new.bin        \
 	jitter_timer.bin      \
 	timing_experiment.bin
 
@@ -26,6 +29,7 @@ STRIP4_HEADERS=strip4.h util.h fsm.h m0delay.S
 RELAYBALL_HEADERS=relayball.h util.h fsm.h m0delay.S
 UARTBALL16_HEADERS=uartball16.h util.h
 WS2801PAR_HEADERS=ws2801par.h util.h m0delay.S
+WS2812_NEW_HEADERS=ws2812_new.h util.h m0delay.S
 JITTER_TIMER_HEADERS=jitter_timer.h m0delay.S
 TIMING_EXPERIMENT_HEADERS=timing_experiment.h m0delay.S
 
@@ -36,6 +40,7 @@ STRIP5_SRCS=strip5.S strip5_init.c strip5_bitbang.S util.c fsm.c $(STARTUP_SRC)
 RELAYBALL_SRCS=relayball.S relayball_init.c relayball_bitbang.S util.c fsm.c $(STARTUP_SRC)
 UARTBALL16_SRCS=uartball16.c util.c $(STARTUP_SRC)
 WS2801PAR_SRCS=ws2801par.c ws2801par_bitbang.S util.c $(STARTUP_SRC)
+WS2812_NEW_SRCS=ws2812_new.c ws2812_new_dma.c ws2812_new_bitbang.S util.c $(STARTUP_SRC)
 JITTER_TIMER_SRCS=jitter_timer.c jitter_timer.S $(STARTUP_SRC)
 TIMING_EXPERIMENT_SRCS=timing_experiment.c timing_experiment.S $(STARTUP_SRC)
 
@@ -78,6 +83,9 @@ uartball16.elf: $(UARTBALL16_SRCS) $(LINKER_SCRIPT) $(UARTBALL16_HEADERS)
 
 ws2801par.elf: $(WS2801PAR_SRCS) $(LINKER_SCRIPT_072) $(WS2801PAR_HEADERS)
 	$(GCC) $(CFLAGS) $(LDFLAGS_072) $(WS2801PAR_FLAGS) $(WS2801PAR_SRCS) -o $@
+
+ws2812_new.elf: $(WS2812_NEW_SRCS) $(LINKER_SCRIPT_030CC) $(WS2812_NEW_HEADERS)
+	$(GCC) $(CFLAGS) $(LDFLAGS_030CC) $(WS2812_NEW_FLAGS) $(WS2812_NEW_SRCS) -o $@
 
 jitter_timer.elf: $(JITTER_TIMER_SRCS) $(LINKER_SCRIPT) $(JITTER_TIMER_HEADERS)
 	$(GCC) $(CFLAGS) $(LDFLAGS) $(JITTER_TIMER_FLAGS) $(JITTER_TIMER_SRCS) -o $@
