move common code to ./common/

--- a/firmware/stm32/m02812/src/Makefile
+++ b/firmware/stm32/m02812/src/Makefile
@@ -1,6 +1,6 @@
 
 GCC=arm-none-eabi-gcc
-CFLAGS=-Wall -g -std=c99 -mlittle-endian -mcpu=cortex-m0 -march=armv6-m -mthumb -ffunction-sections -fdata-sections -I platform -I. -Os
+CFLAGS=-Wall -g -std=c99 -mlittle-endian -mcpu=cortex-m0 -march=armv6-m -mthumb -ffunction-sections -fdata-sections -I platform -I common -I. -Os
 CFLAGS_GPIOB=$(CFLAGS) -DUSE_GPIOB=1
 LDFLAGS=-Wl,--gc-sections -Lplatform -T../$(LINKER_SCRIPT)
 LDFLAGS_072=-Wl,--gc-sections -Lplatform -T../$(LINKER_SCRIPT_072)
@@ -24,25 +24,25 @@ TARGETS=                  \
 	jitter_timer.bin      \
 	timing_experiment.bin
 
-DITHER8_HEADERS=dither8.h util.h m0delay.S
-DITHER16_HEADERS=dither16.h util.h m0delay.S
-STRIP5_HEADERS=strip5.h util.h m0delay.S
-STRIP4_HEADERS=strip4.h util.h fsm.h m0delay.S
-RELAYBALL_HEADERS=relayball.h util.h fsm.h m0delay.S
-UARTBALL16_HEADERS=uartball16.h util.h
-WS2801PAR_HEADERS=ws2801par.h util.h m0delay.S
-WS2812_NEW_HEADERS=ws2812_new.h util.h m0delay.S
-JITTER_TIMER_HEADERS=jitter_timer.h m0delay.S
-TIMING_EXPERIMENT_HEADERS=timing_experiment.h m0delay.S
+DITHER8_HEADERS=dither8.h common/util.h common/m0delay.S
+DITHER16_HEADERS=dither16.h common/util.h common/m0delay.S
+STRIP5_HEADERS=strip5.h common/util.h common/m0delay.S
+STRIP4_HEADERS=strip4.h common/util.h fsm.h common/m0delay.S
+RELAYBALL_HEADERS=relayball.h common/util.h fsm.h common/m0delay.S
+UARTBALL16_HEADERS=uartball16.h common/util.h
+WS2801PAR_HEADERS=ws2801par.h common/util.h common/m0delay.S
+WS2812_NEW_HEADERS=ws2812_new.h common/util.h common/m0delay.S
+JITTER_TIMER_HEADERS=jitter_timer.h common/m0delay.S
+TIMING_EXPERIMENT_HEADERS=timing_experiment.h common/m0delay.S
 
-DITHER8_SRCS=dither8.c dither8_bitbang.S util.c $(STARTUP_SRC)
-DITHER16_SRCS=dither16.c dither16_bitbang.S util.c $(STARTUP_SRC)
-STRIP4_SRCS=strip4.c strip4_bitbang.S util.c $(STARTUP_SRC)
-STRIP5_SRCS=strip5.S strip5_init.c strip5_bitbang.S util.c fsm.c $(STARTUP_SRC)
-RELAYBALL_SRCS=relayball.S relayball_init.c relayball_bitbang.S util.c fsm.c $(STARTUP_SRC)
-UARTBALL16_SRCS=uartball16.c util.c $(STARTUP_SRC)
-WS2801PAR_SRCS=ws2801par.c ws2801par_bitbang.S util.c $(STARTUP_SRC)
-WS2812_NEW_SRCS=ws2812_new.c ws2812_new_dma.c ws2812_new_asm.S util.c $(STARTUP_SRC)
+DITHER8_SRCS=dither8.c dither8_bitbang.S common/util.c $(STARTUP_SRC)
+DITHER16_SRCS=dither16.c dither16_bitbang.S common/util.c $(STARTUP_SRC)
+STRIP4_SRCS=strip4.c strip4_bitbang.S common/util.c $(STARTUP_SRC)
+STRIP5_SRCS=strip5.S strip5_init.c strip5_bitbang.S common/util.c fsm.c $(STARTUP_SRC)
+RELAYBALL_SRCS=relayball.S relayball_init.c relayball_bitbang.S common/util.c fsm.c $(STARTUP_SRC)
+UARTBALL16_SRCS=uartball16.c common/util.c $(STARTUP_SRC)
+WS2801PAR_SRCS=ws2801par.c ws2801par_bitbang.S common/util.c $(STARTUP_SRC)
+WS2812_NEW_SRCS=ws2812_new.c ws2812_new_dma.c ws2812_new_asm.S common/util.c $(STARTUP_SRC)
 JITTER_TIMER_SRCS=jitter_timer.c jitter_timer.S $(STARTUP_SRC)
 TIMING_EXPERIMENT_SRCS=timing_experiment.c timing_experiment.S $(STARTUP_SRC)
 
