move firmwares to separate directories

--- a/firmware/stm32/m02812/src/Makefile
+++ b/firmware/stm32/m02812/src/Makefile
@@ -11,43 +11,70 @@ LINKER_SCRIPT_072=platform/stm32f072.ld
 LINKER_SCRIPT_030CC=platform/stm32f030cc.ld
 STARTUP_SRC=platform/startup_stm32f0xx.s
 
-WS2812NEW_ELF=ws2812new/ws2812new.bin
+WS2812NEW_ELF=ws2812new/ws2812new.elf
 WS2812NEW_HEADERS=ws2812new/ws2812_new.h ws2812new/config.h common/ws2812_dma.h common/util.h common/m0delay.S
 WS2812NEW_SRCS=ws2812new/ws2812_new.c common/ws2812_dma.c ws2812new/ws2812_new_asm.S common/util.c $(STARTUP_SRC)
 WS2812NEW_FLAGS=-I ws2812new
 
-DITHER8_HEADERS=dither8.h common/util.h common/m0delay.S
-DITHER16_HEADERS=dither16.h common/util.h common/m0delay.S
-STRIP5_HEADERS=strip5.h common/util.h common/m0delay.S
-STRIP4_HEADERS=strip4.h common/util.h fsm.h common/m0delay.S
-RELAYBALL_HEADERS=relayball.h common/util.h fsm.h common/m0delay.S
-UARTBALL16_HEADERS=uartball16.h common/util.h
-WS2801PAR_HEADERS=ws2801par.h common/util.h common/m0delay.S
-JITTER_TIMER_HEADERS=jitter_timer.h common/m0delay.S
-TIMING_EXPERIMENT_HEADERS=timing_experiment.h common/m0delay.S
+WS2801PAR_ELF=ws2801par/ws2801par.elf
+WS2801PAR_HEADERS=ws2801par/ws2801par.h common/util.h common/m0delay.S
+WS2801PAR_SRCS=ws2801par/ws2801par.c ws2801par/ws2801par_bitbang.S common/util.c $(STARTUP_SRC)
+WS2801PAR_FLAGS=-I ws2801par
 
-DITHER8_SRCS=dither8.c dither8_bitbang.S common/util.c $(STARTUP_SRC)
-DITHER16_SRCS=dither16.c dither16_bitbang.S common/util.c $(STARTUP_SRC)
-STRIP4_SRCS=strip4.c strip4_bitbang.S common/util.c $(STARTUP_SRC)
-STRIP5_SRCS=strip5.S strip5_init.c strip5_bitbang.S common/util.c fsm.c $(STARTUP_SRC)
-RELAYBALL_SRCS=relayball.S relayball_init.c relayball_bitbang.S common/util.c fsm.c $(STARTUP_SRC)
-UARTBALL16_SRCS=uartball16.c common/util.c $(STARTUP_SRC)
-WS2801PAR_SRCS=ws2801par.c ws2801par_bitbang.S common/util.c $(STARTUP_SRC)
-JITTER_TIMER_SRCS=jitter_timer.c jitter_timer.S $(STARTUP_SRC)
-TIMING_EXPERIMENT_SRCS=timing_experiment.c timing_experiment.S $(STARTUP_SRC)
+TIMING_EXPERIMENT_ELF=timing_experiment/timing_experiment.elf
+TIMING_EXPERIMENT_HEADERS=timing_experiment/timing_experiment.h common/m0delay.S
+TIMING_EXPERIMENT_SRCS=timing_experiment/timing_experiment.c timing_experiment/timing_experiment.S $(STARTUP_SRC)
+TIMING_EXPERIMENT_FLAGS=-I timing_experiment
 
-ELFS=                  \
-	dither8.elf           \
-	dither16.elf          \
-	strip4.elf            \
-	strip5.elf            \
-	strip5_gpiob.elf      \
-	relayball.elf         \
-	uartball16.elf        \
-	ws2801par.elf         \
-	$(WS2812NEW_ELF) \
-	jitter_timer.elf      \
-	timing_experiment.elf
+DITHER8_ELF=dither8/dither8.elf
+DITHER8_HEADERS=dither8/dither8.h common/util.h common/m0delay.S
+DITHER8_SRCS=dither8/dither8.c dither8/dither8_bitbang.S common/util.c $(STARTUP_SRC)
+DITHER8_FLAGS=-I dither8
+
+DITHER16_ELF=dither16/dither16.elf
+DITHER16_HEADERS=dither16/dither16.h common/util.h common/m0delay.S
+DITHER16_SRCS=dither16/dither16.c dither16/dither16_bitbang.S common/util.c $(STARTUP_SRC)
+DITHER16_FLAGS=-I dither16
+
+STRIP5_ELF=strip5/strip5.elf
+STRIP5_HEADERS=strip5/strip5.h common/util.h common/m0delay.S
+STRIP5_SRCS=strip5/strip5.S strip5/strip5_init.c strip5/strip5_bitbang.S common/util.c common/fsm.c $(STARTUP_SRC)
+STRIP5_FLAGS=-I strip5
+
+STRIP5_GPIOB_ELF=strip5/strip5_gpiob.elf
+
+STRIP4_ELF=strip4/strip4.elf
+STRIP4_HEADERS=strip4/strip4.h common/util.h common/fsm.h common/m0delay.S
+STRIP4_SRCS=strip4/strip4.c strip4/strip4_bitbang.S common/util.c $(STARTUP_SRC)
+STRIP4_FLAGS=-I strip4
+
+RELAYBALL_ELF=relayball/relayball.elf
+RELAYBALL_HEADERS=relayball/relayball.h common/util.h common/fsm.h common/m0delay.S
+RELAYBALL_SRCS=relayball/relayball.S relayball/relayball_init.c relayball/relayball_bitbang.S common/util.c common/fsm.c $(STARTUP_SRC)
+RELAYBALL_FLAGS=-I relayball
+
+UARTBALL16_ELF=uartball16/uartball16.elf
+UARTBALL16_HEADERS=uartball16/uartball16.h common/util.h
+UARTBALL16_SRCS=uartball16/uartball16.c common/util.c $(STARTUP_SRC)
+UARTBALL16_FLAGS=-I uartball16
+
+JITTER_TIMER_ELF=jitter_timer/jitter_timer.elf
+JITTER_TIMER_HEADERS=jitter_timer/jitter_timer.h common/m0delay.S
+JITTER_TIMER_SRCS=jitter_timer/jitter_timer.c jitter_timer/jitter_timer.S $(STARTUP_SRC)
+JITTER_TIMER_FLAGS=-I jitter_timer
+
+ELFS=                        \
+	$(DITHER8_ELF)           \
+	$(DITHER16_ELF)          \
+	$(STRIP4_ELF)            \
+	$(STRIP5_ELF)            \
+	$(STRIP5_GPIOB_ELF)      \
+	$(RELAYBALL_ELF)         \
+	$(UARTBALL16_ELF)        \
+	$(WS2801PAR_ELF)         \
+	$(WS2812NEW_ELF)         \
+	$(JITTER_TIMER_ELF)      \
+	$(TIMING_EXPERIMENT_ELF)
 
 TARGETS=$(patsubst %.elf, %.bin, $(ELFS))
 
@@ -70,36 +97,36 @@ test: $(TARGETS)
 %.bin: %.elf
 	arm-none-eabi-objcopy -O binary $< $@
 
-dither8.elf: $(DITHER8_SRCS) $(LINKER_SCRIPT) $(DITHER8_HEADERS)
+$(DITHER8_ELF): $(DITHER8_SRCS) $(LINKER_SCRIPT) $(DITHER8_HEADERS)
 	$(GCC) $(CFLAGS) $(LDFLAGS) $(DITHER8_FLAGS) $(DITHER8_SRCS) -o $@
 
-dither16.elf: $(DITHER16_SRCS) $(LINKER_SCRIPT) $(DITHER16_HEADERS)
+$(DITHER16_ELF): $(DITHER16_SRCS) $(LINKER_SCRIPT) $(DITHER16_HEADERS)
 	$(GCC) $(CFLAGS) $(LDFLAGS) $(DITHER16_FLAGS) $(DITHER16_SRCS) -o $@
 
-strip4.elf: $(STRIP4_SRCS) $(LINKER_SCRIPT) $(STRIP4_HEADERS)
+$(STRIP4_ELF): $(STRIP4_SRCS) $(LINKER_SCRIPT) $(STRIP4_HEADERS)
 	$(GCC) $(CFLAGS) $(LDFLAGS) $(STRIP4_FLAGS) $(STRIP4_SRCS) -o $@
 
-strip5.elf: $(STRIP5_SRCS) $(LINKER_SCRIPT_072) $(STRIP5_HEADERS)
+$(STRIP5_ELF): $(STRIP5_SRCS) $(LINKER_SCRIPT_072) $(STRIP5_HEADERS)
 	$(GCC) $(CFLAGS) $(LDFLAGS_072) $(STRIP5_FLAGS) $(STRIP5_SRCS) -o $@
 
-strip5_gpiob.elf: $(STRIP5_SRCS) $(LINKER_SCRIPT_072) $(STRIP5_HEADERS)
+$(STRIP5_GPIOB_ELF): $(STRIP5_SRCS) $(LINKER_SCRIPT_072) $(STRIP5_HEADERS)
 	$(GCC) $(CFLAGS_GPIOB) $(LDFLAGS_072) $(STRIP5_FLAGS) $(STRIP5_SRCS) -o $@
 
-relayball.elf: $(RELAYBALL_SRCS) $(LINKER_SCRIPT) $(RELAYBALL_HEADERS)
+$(RELAYBALL_ELF): $(RELAYBALL_SRCS) $(LINKER_SCRIPT) $(RELAYBALL_HEADERS)
 	$(GCC) $(CFLAGS) $(LDFLAGS) $(RELAYBALL_FLAGS) $(RELAYBALL_SRCS) -o $@
 
-uartball16.elf: $(UARTBALL16_SRCS) $(LINKER_SCRIPT) $(UARTBALL16_HEADERS)
+$(UARTBALL16_ELF): $(UARTBALL16_SRCS) $(LINKER_SCRIPT) $(UARTBALL16_HEADERS)
 	$(GCC) $(CFLAGS) $(LDFLAGS) $(UARTBALL16_FLAGS) $(UARTBALL16_SRCS) -o $@
 
-ws2801par.elf: $(WS2801PAR_SRCS) $(LINKER_SCRIPT_072) $(WS2801PAR_HEADERS)
+$(WS2801PAR_ELF): $(WS2801PAR_SRCS) $(LINKER_SCRIPT_072) $(WS2801PAR_HEADERS)
 	$(GCC) $(CFLAGS) $(LDFLAGS_072) $(WS2801PAR_FLAGS) $(WS2801PAR_SRCS) -o $@
 
 $(WS2812NEW_ELF): $(WS2812NEW_SRCS) $(LINKER_SCRIPT_030CC) $(WS2812NEW_HEADERS)
 	$(GCC) $(CFLAGS) $(LDFLAGS_030CC) $(WS2812NEW_FLAGS) $(WS2812NEW_SRCS) -o $@
 
-jitter_timer.elf: $(JITTER_TIMER_SRCS) $(LINKER_SCRIPT) $(JITTER_TIMER_HEADERS)
+$(JITTER_TIMER_ELF): $(JITTER_TIMER_SRCS) $(LINKER_SCRIPT) $(JITTER_TIMER_HEADERS)
 	$(GCC) $(CFLAGS) $(LDFLAGS) $(JITTER_TIMER_FLAGS) $(JITTER_TIMER_SRCS) -o $@
 
-timing_experiment.elf: $(TIMING_EXPERIMENT_SRCS) $(LINKER_SCRIPT) $(TIMING_EXPERIMENT_HEADERS)
+$(TIMING_EXPERIMENT_ELF): $(TIMING_EXPERIMENT_SRCS) $(LINKER_SCRIPT) $(TIMING_EXPERIMENT_HEADERS)
 	$(GCC) $(CFLAGS) $(LDFLAGS) $(TIMING_EXPERIMENT_FLAGS) $(TIMING_EXPERIMENT_SRCS) -o $@
 
