rename dma implementation to ws2812_dma16

--- a/firmware/stm32/Makefile
+++ b/firmware/stm32/Makefile
@@ -11,10 +11,10 @@ LINKER_SCRIPT_072=platform/stm32f072.ld
 LINKER_SCRIPT_030CC=platform/stm32f030cc.ld
 STARTUP_SRC=platform/startup_stm32f0xx.s
 
-WS2812NEW_ELF=ws2812new/ws2812new.elf
-WS2812NEW_HEADERS=ws2812new/ws2812_new.h ws2812new/config.h common/ws2812_dma.h common/util.h common/m0delay.S
-WS2812NEW_SRCS=ws2812new/ws2812_new.c common/ws2812_dma.c ws2812new/ws2812_new_asm.S common/util.c $(STARTUP_SRC)
-WS2812NEW_FLAGS=-I ws2812new
+WS2812_DMA16_ELF=ws2812_dma16/ws2812_dma16.elf
+WS2812_DMA16_HEADERS=ws2812_dma16/config.h ws2812_dma16/ws2812_dma16.h common/ws2812_dma.h common/util.h common/m0delay.S
+WS2812_DMA16_SRCS=ws2812_dma16/asm_routines.S ws2812_dma16/main.c common/ws2812_dma.c common/util.c $(STARTUP_SRC)
+WS2812_DMA16_FLAGS=-I ws2812_dma16
 
 WS2801PAR_ELF=ws2801par/ws2801par.elf
 WS2801PAR_HEADERS=ws2801par/ws2801par.h common/util.h common/m0delay.S
@@ -72,7 +72,7 @@ ELFS=                        \
 	$(RELAYBALL_ELF)         \
 	$(UARTBALL16_ELF)        \
 	$(WS2801PAR_ELF)         \
-	$(WS2812NEW_ELF)         \
+	$(WS2812_DMA16_ELF)         \
 	$(JITTER_TIMER_ELF)      \
 	$(TIMING_EXPERIMENT_ELF)
 
@@ -121,8 +121,8 @@ $(UARTBALL16_ELF): $(UARTBALL16_SRCS) $(LINKER_SCRIPT) $(UARTBALL16_HEADERS)
 $(WS2801PAR_ELF): $(WS2801PAR_SRCS) $(LINKER_SCRIPT_072) $(WS2801PAR_HEADERS)
 	$(GCC) $(CFLAGS) $(LDFLAGS_072) $(WS2801PAR_FLAGS) $(WS2801PAR_SRCS) -o $@
 
-$(WS2812NEW_ELF): $(WS2812NEW_SRCS) $(LINKER_SCRIPT_030CC) $(WS2812NEW_HEADERS)
-	$(GCC) $(CFLAGS) $(LDFLAGS_030CC) $(WS2812NEW_FLAGS) $(WS2812NEW_SRCS) -o $@
+$(WS2812_DMA16_ELF): $(WS2812_DMA16_SRCS) $(LINKER_SCRIPT_030CC) $(WS2812_DMA16_HEADERS)
+	$(GCC) $(CFLAGS) $(LDFLAGS_030CC) $(WS2812_DMA16_FLAGS) $(WS2812_DMA16_SRCS) -o $@
 
 $(JITTER_TIMER_ELF): $(JITTER_TIMER_SRCS) $(LINKER_SCRIPT) $(JITTER_TIMER_HEADERS)
 	$(GCC) $(CFLAGS) $(LDFLAGS) $(JITTER_TIMER_FLAGS) $(JITTER_TIMER_SRCS) -o $@
